# bevy_svg

./: .gitignore  Cargo.toml
examples/: complex_one_color.rs  twinkle.rs  two_colors.rs
src/: bundle.rs  lib.rs  loader.rs  plugin.rs  render.rs  svg.rs  vertex_buffer.rs
