[package]
authors = ["Daniel Wiesenberg <weasy@hotmail.de>"]
description = "Load and draw simple SVG files in Bevy."
edition = "2018"
license = "Apache-2.0"
name = "bevy_svg"
readme = "README.md"
repository = "https://github.com/Weasy666/bevy_svg/"
version = "0.3.0"
keywords = ["gamedev", "graphics", "bevy", "svg"]
categories = ["Graphics", "Game engines", "Rendering"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.43"
bevy = { version = "0.5.0", default-features = false, features = ["render", "trace"] }

lyon_geom = "0.17.5"
lyon_svg = "0.17.2"
lyon_tessellation = "0.17.8"
usvg = "0.16.0"

[dev-dependencies]
bevy = { version = "0.5.0", default-features = true }
